Update index.html and stylesheet.css

--- a/Portfolio Website/css/stylesheet.css
+++ b/Portfolio Website/css/stylesheet.css
@@ -91,6 +91,8 @@ img {
     max-height: 100%; /* Ensures all images stay within the height of their container */
     display: block; /* By specifying block display we can ensure our images are able to be centered */
     margin: auto auto auto auto; /* This centers all images */
+    width: 300;
+    height: 300;
 }
 
 /* Image element hover effects */
